# Humm

./: .npmrc  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
docs/: building-and-installing.md
docs/superpowers/plans/: 2026-04-08-typr-dictation-app.md
docs/superpowers/specs/: 2026-04-08-typr-dictation-app-design.md
src/: main.ts  overlay.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  main.rs  paste.rs  recorder.rs  settings.rs  transcribe_groq.rs  transcribe_local.rs
