[package]
name = "Humm"
version = "0.1.1"
description = "A dictation app powered by Whisper"
authors = ["you"]
edition = "2021"

[lib]
name = "humm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
cpal = "0.17.3"
enigo = "0.6.1"
reqwest = { version = "0.13.2", features = ["multipart", "json", "stream"] }
hound = "3.5.1"
tokio = { version = "1.52.1", features = ["full"] }
dirs = "6.0.0"
arboard = "3.6.1"
futures-util = "0.3.32"
libc = "0.2.186"
